WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
NEW
277270
[WebXR] Prompt accepted does not need to be set back to std::nullopt
https://bugs.webkit.org/show_bug.cgi?id=277270
Summary
[WebXR] Prompt accepted does not need to be set back to std::nullopt
Mike Wyrzykowski
Reported
2024-07-29 12:07:41 PDT
[WebXR] Prompt accepted does not need to be set back to std::nullopt
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2024-07-29 12:07:55 PDT
<
rdar://problem/132742523
>
Mike Wyrzykowski
Comment 2
2024-07-29 12:12:57 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/31404
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug